--- a/index.css
+++ b/index.css
@@ -1,57 +1,55 @@
-.header {
+.header{
     display: flex;
-    justify-content: space-between ;
+    justify-content: space-between;
     margin: 10px;
-    border: 1 px solid hsla(0, 100%, 19%, 0.69);
-    background-color: hsl(209, 77%, 22%);
-    color: white;
-    box-sizing: border-box;
+    border: 5px solid rgb(158, 28, 28);
+    background-color: antiquewhite;
 }
-.header button{
-    background-color: grey;
-    color:red;
-    padding: 20px
+.nav-items > ul{
+    list-style-type: none;
+    display: flex;
+
 }
-.nav-items > ul {
-   list-style-type: none;
-   display: flex;
-   }
-.nav-items > ul > li {
+.nav-items > ul > li{
+    cursor: pointer;
     padding: 30px;
-    font-size: 20px;
+    padding-top: 20%;
 }
 .logo{
-    width: 50%;
-    height: 100%;
-}
-.card{
-    width: 300px;
-    height: 300pxpx;
-    border: 1px solid black;
-    padding: 10px;
-    margin: 100 px;
-    /* background-color: rgb(84, 0, 157);
-    color: rgb(207, 197, 197); */
-}
-.card > img {
-    width: 100%;
-    height: 300px;
-   
+    width:200px;
+    border-radius: 50%;
+    padding: 20px;
 }
 
+.card{
+    width: 250px;
+    border: 2px solid rgb(185, 173, 173);
+    border-radius: 10px;
+    padding: 10px;
+    margin: 5px;
+    background-color: red;
+}
+.card > img{
+    width: 100%;
+}
 .restaurant-list{
     display: flex;
-    /* flex-wrap: wrap; */
-    margin: 100px;
+    flex-wrap: wrap;
+    /* justify-content: space-between; */
+    background-color: black
+}
+
+
+.shimmer-list .box{
+    width: 250px;
+    height: 400px;
     padding: 10px;
-    column-gap: 20px;
-    row-gap: 20px;
-    background-color: pure rgb(225, 209, 209);
+    margin: 5px;
     
+    background-color: rgb(163, 156, 156);
 }
-.search-container{
-    background-color: #2d2828;
-}
-Body{
-    background-color: rgb(139, 137, 161);
+.shimmer-list{
+    display: flex;
+    flex-wrap: wrap;
+    /* justify-content: space-between; */
 }
