--- a/index.css
+++ b/index.css
@@ -26,8 +26,8 @@
     border: 2px solid rgb(185, 173, 173);
     border-radius: 10px;
     padding: 10px;
-    margin: 5px;
-    background-color: red;
+    margin-left: 23px;
+    /* background-color: red; */
 }
 .card > img{
     width: 100%;
@@ -36,7 +36,7 @@
     display: flex;
     flex-wrap: wrap;
     /* justify-content: space-between; */
-    background-color: black
+    /* background-color: black */
 }
 
 
