--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@
     margin: 10px;
     border: 5px solid rgb(158, 28, 28);
     background-color: antiquewhite;
+    box-sizing: border-box;
 }
 .nav-items > ul{
     list-style-type: none;
