--- a/index.css
+++ b/index.css
@@ -1,52 +1,3 @@
-.header{
-    display: flex;
-    justify-content: space-between;
-    margin: 10px;
-    border: 5px solid rgb(158, 28, 28);
-    background-color: antiquewhite;
-    box-sizing: border-box;
-}
-.nav-items > ul{
-    list-style-type: none;
-    display: flex;
-
-}
-.nav-items > ul > li{
-    cursor: pointer;
-    padding: 30px;
-    padding-top: 20%;
-}
-.logo{
-    width:200px;
-    border-radius: 50%;
-    padding: 20px;
-}
-
-.card{
-    width: 250px;
-    border: 2px solid rgb(185, 173, 173);
-    border-radius: 10px;
-    padding: 10px;
-    margin-left: 23px;
-    /* background-color: red; */
-}
-.card > img{
-    width: 100%;
-}
-.restaurant-list{
-    display: flex;
-    flex-wrap: wrap;
-    /* justify-content: space-between; */
-    /* background-color: black */
-}
-
-
-.shimmer-card {
-    width: 200px;
-    height: 400px;
-    background-color: lightgray;
-    margin: 20px;
-}
-.menu {
-    display: flex;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
